--- a/docs/latex/tex/1_Introduccion.tex
+++ b/docs/latex/tex/1_Introduccion.tex
@@ -29,7 +29,7 @@ Por otro lado, según el Plan de Educación Financiera 2022-2025 \citep{report:c
  manera experimental, se introduce al usuario en la utilización de modelos para análisis 
  de series temporales, con la intención de aportar herramientas adicionales a su \textit{backup} 
  financiero. Concretamente, se da acceso al uso de modelos ARIMA \citep{wiki:ARIMA} 
- y de estrategias basadas en \emph{machine learning}. Además, se ofrece una herramienta de control de carteras para que el usuario poder hacer su propio análisis de rentabilidad-riesgo y se aportan soluciones que favorecen la diversificación. 
+ y de estrategias basadas en \emph{machine learning}. Además, se ofrece una herramienta de control de carteras para que el usuario pueda hacer su propio análisis de rentabilidad-riesgo y se aportan soluciones que favorecen la diversificación. 
 
 
 \section{Estructura de la memoria}\label{estructura-de-la-memoria}
@@ -94,17 +94,15 @@ Los materiales que se adjuntan con la memoria son:
 \begin{itemize}
 \tightlist
 \item
-	\textbf{Herramienta web FAT}: Financial Analysis Tool.
+	\textbf{Herramienta web FAT}: Financial Analysis Tool\citep{online:FAT_web}.
 \item	
-	\emph{Dataset} de \textbf{vídeos de prueba}.
+	\textbf{Vídeos de demostración}.
 \end{itemize}
 
 Además, los siguientes recursos están accesibles a través de internet:
 
 \begin{itemize}
 \tightlist
-\item
-  \textbf{Página web} del proyecto \citep{online:FAT_web}.
 \item
   \textbf{Repositorio} del proyecto \citep{online:FAT_repo}.
 \item
