--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -1,15 +1,7 @@
-@book{koza92,
-		author    = "Koza, John R.",
-		title     = "Genetic Programming: On the Programming of Computers by Means of Natural Selection",
-		publisher = "MIT Press",
-		year      = "1992"
-}
-
-
-@misc{ wiki:latex,
-       author = "Wikipedia",
-       title = "LaTeX --- Wikipedia{,} La enciclopedia libre",
-       year = "2015",
-       url = "https://es.wikipedia.org/w/index.php?title=LaTeX&oldid=84209252",
-       note = "[Internet; descargado 30-septiembre-2015]"
+@misc{ wiki:Scrum,
+	author = {Wikipedia},
+	title = {\emph{Scrum (desarrollo de software)}},
+	year = {2024},
+	howpublished = {\url{https://es.wikipedia.org/wiki/Scrum_(desarrollo_de_software)}},
+	note = {Online; Accedido el 20-Abr-2024}
 }
